--- a/subscribe-success.html
+++ b/subscribe-success.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Cairo', sans-serif;
-      background: linear-gradient(135deg, #d4fc79, #96e6a1);
+      background: linear-gradient(135deg, #d4fc79, #336b3a);
       display: flex;
       justify-content: center;
       align-items: center;
