--- a/index.html
+++ b/index.html
@@ -148,17 +148,12 @@
     }
     @keyframes lock {
       0% { transform: scale(0.8) rotate(-20deg); opacity: 0; }
-      50% { transform: scale(1.3) rotate(0); opacity: 1; }
+      50% { transform: scale(1.3) rotate(0deg); opacity: 1; }
       100% { transform: scale(1) rotate(0); }
     }
   </style>
 </head>
 <body>
-  <script>
-    // توجيه مباشر لصفحة تسجيل الدخول
-    window.location.href = "login.html";
-  </script>
-
   <header>
     <h1>لوحة تحكم المدرسة</h1>
     <div style="display: flex; gap: 10px; align-items: center;">
