--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>لوحة تحكم المدرسة</title>
+  <title>تسجيل الدخول / إنشاء حساب</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
@@ -12,317 +12,259 @@
       font-family: 'Cairo', sans-serif;
       background: linear-gradient(135deg, #5a2a83, #9c27b0);
       color: #fff;
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
-      flex-direction: column;
       align-items: center;
-      padding: 20px 15px;
+      justify-content: center;
+      position: relative;
     }
-    header, nav, footer {
-      width: 100%;
-      max-width: 900px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.25);
-      background: rgba(255 255 255 / 0.08);
+    .container {
+      background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
-      padding: 20px 30px;
-      margin-bottom: 25px;
       backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
+      padding: 35px 25px;
+      width: 90%;
+      max-width: 380px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+      text-align: center;
+      animation: fadeIn 1s ease forwards;
     }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 10px;
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      font-weight: bold;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.4);
     }
-    header h1 {
-      font-size: 2.5rem;
-      font-weight: 900;
-      text-shadow: 0 3px 10px rgba(0,0,0,0.5);
-      letter-spacing: 2px;
-      margin: 0;
-    }
-    .logout-btn, .dev-login-btn, .whatsapp-btn {
-      padding: 12px 25px;
+    input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
       border-radius: 12px;
-      font-weight: 700;
-      color: white;
-      cursor: pointer;
       border: none;
       font-size: 1rem;
-      transition: background-color 0.3s ease, transform 0.2s ease;
     }
-    .logout-btn { background-color: #ff5252; box-shadow: 0 6px 18px rgba(255, 82, 82, 0.6); }
-    .logout-btn:hover { background-color: #e04848; transform: scale(1.05); }
-    .dev-login-btn { background-color: #4caf50; box-shadow: 0 6px 18px rgba(76, 175, 80, 0.6); }
-    .dev-login-btn:hover { background-color: #3a8c3a; transform: scale(1.05); }
-    .whatsapp-btn { background-color: #25d366; box-shadow: 0 6px 18px rgba(37, 211, 102, 0.6); }
-    .whatsapp-btn:hover { background-color: #1da851; transform: scale(1.05); }
-    nav ul {
-      display: flex;
-      flex-wrap: wrap;
-      list-style: none;
-      gap: 20px;
-      padding: 0;
-      justify-content: center;
-      margin: 0;
-    }
-    nav ul li {
-      background: rgba(255, 255, 255, 0.15);
-      padding: 18px 0;
-      border-radius: 20px;
-      flex: 1 1 130px;
-      max-width: 200px;
-      text-align: center;
-      font-weight: 800;
-      cursor: pointer;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-      user-select: none;
-    }
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-size: 1.1rem;
-      display: block;
+    button {
       width: 100%;
-      height: 100%;
-      padding: 0 15px;
-    }
-    nav ul li small {
-      display: block;
-      font-size: 0.8rem;
-      color: #ffeb3b;
-      margin-top: 5px;
-    }
-    .locked { pointer-events: none; opacity: 0.6; position: relative; }
-    footer {
-      text-align: center;
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: #ffeb3b;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.6);
-      margin-top: auto;
-      padding: 15px;
-      user-select: none;
-    }
-    .social-buttons {
-      margin-top: 15px;
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
-    .social-buttons a {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      text-decoration: none;
-      padding: 10px 18px;
-      border-radius: 10px;
+      padding: 12px;
+      border-radius: 12px;
+      border: none;
+      background-color: #ffeb3b;
+      color: #333;
       font-weight: bold;
+      font-size: 1.1rem;
+      margin-top: 15px;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+    button:hover {
+      background-color: #fdd835;
+      transform: scale(1.02);
+    }
+    .error, .success {
+      margin-top: 10px;
+      font-size: 0.9rem;
+      font-weight: bold;
+    }
+    .error { color: #ffcdd2; }
+    .success { color: #a5ffb3; }
+    .toggle-link {
+      margin-top: 15px;
       font-size: 0.95rem;
-      transition: transform 0.2s;
+      display: inline-block;
+      text-decoration: underline;
+      cursor: pointer;
+      color: #ffe;
     }
-    .social-buttons a:hover {
-      transform: scale(1.05);
+    .extra-link {
+      margin-top: 10px;
+      font-size: 0.9rem;
+      color: #ffeb3b;
+      cursor: pointer;
+      display: inline-block;
+      text-decoration: underline;
     }
-    .twitter { background-color: #1da1f2; color: white; }
-    .instagram {
-      background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-      color: white;
+    .hidden { display: none; }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
-    .snapchat { background-color: #fffc00; color: black; }
-    @media (max-width: 600px) {
-      header h1 { font-size: 1.8rem; width: 100%; text-align: center; }
-      nav ul li { max-width: 100%; flex: 1 1 100%; font-size: 1rem; padding: 14px 0; }
-      .logout-btn, .dev-login-btn, .whatsapp-btn { padding: 10px 18px; font-size: 0.9rem; width: 100%; }
+    #dataBox {
+      position: absolute;
+      top: 60px;
+      right: 15px;
+      background: #fff;
+      color: #333;
+      padding: 15px;
+      border-radius: 12px;
+      max-width: 320px;
+      font-size: 0.9rem;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+      display: none;
     }
-
-    /* Animation for lock/unlock */
-    @keyframes unlock {
-      0% { transform: scale(1) rotate(0deg); opacity: 1; }
-      50% { transform: scale(1.3) rotate(20deg); }
-      100% { transform: scale(1) rotate(0); opacity: 0; }
+    #dataBox button {
+      margin-top: 10px;
+      background: #5a2a83;
+      color: #fff;
+      font-size: 0.9rem;
     }
-    @keyframes lock {
-      0% { transform: scale(0.8) rotate(-20deg); opacity: 0; }
-      50% { transform: scale(1.3) rotate(0deg); opacity: 1; }
-      100% { transform: scale(1) rotate(0); }
+    #top-right-button {
+      position: absolute;
+      top: 10px;
+      right: 15px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>لوحة تحكم المدرسة</h1>
-    <div style="display: flex; gap: 10px; align-items: center;">
-      <button class="logout-btn" onclick="logout()">تسجيل خروج</button>
-      <button class="dev-login-btn" onclick="devLogin()">تسجيل دخول مطور</button>
-      <button class="whatsapp-btn" onclick="openWhatsApp()">واتساب المساعدة</button>
-    </div>
-  </header>
 
-  <nav>
-    <ul id="nav-list">
-      <li class="locked"><a href="#">الطلاب<small>للنسخة المدفوعة</small></a></li>
-      <li class="locked"><a href="#">المواظبة<small>للنسخة المدفوعة</small></a></li>
-      <li class="locked"><a href="#">السلوك<small>للنسخة المدفوعة</small></a></li>
-      <li class="locked"><a href="#">التقدم الدراسي<small>للنسخة المدفوعة</small></a></li>
-      <li class="locked"><a href="#">أولياء الأمور<small>للنسخة المدفوعة</small></a></li>
-      <li class="locked"><a href="#">غرفة المعلمين<small>للنسخة المدفوعة</small></a></li>
-      <li class="locked"><a href="#">📗 حضور الطلاب<small>للنسخة المدفوعة</small></a></li>
-      <li class="locked"><a href="#">📕 غياب الطلاب<small>للنسخة المدفوعة</small></a></li>
-      <li><a href="subscriptions.html">الاشتراكات</a></li>
-    </ul>
-  </nav>
-
-  <footer>
-    <p>تطوير: إلياس عبدالاله إبراهيم عكام</p>
-    <button onclick="showStory()" style="margin-top: 10px; padding: 10px 20px; border-radius: 10px; border: none; background-color: #ffc107; color: #000; font-weight: bold; cursor: pointer;">قصة</button>
-    <div class="social-buttons">
-      <a href="https://x.com/ly0s1" class="twitter" target="_blank">🐦 تويتر</a>
-      <a href="https://www.instagram.com/ly0s1/profilecard/?igsh=MWZhYTFmaXRvNXVwdg==" class="instagram" target="_blank">📸 إنستقرام</a>
-      <a href="https://snapchat.com/t/z39tuRMB" class="snapchat" target="_blank">👻 سناب شات</a>
-    </div>
-  </footer>
-
-  <!-- قفل الأنيميشن -->
-  <div id="lockAnimation" style="display: none; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0,0,0,0.7); z-index: 1000; justify-content: center; align-items: center;">
-    <div id="lockIcon" style="font-size: 80px; color: white; animation: none;">🔒</div>
+  <!-- زر عرض البيانات -->
+  <div id="top-right-button">
+    <button onclick="checkAndShowData()">📂 عرض بياناتي</button>
   </div>
 
-  <!-- قصة -->
-  <div id="storyModal" style="display:none; position:fixed; top:0; right:0; bottom:0; left:0; background: rgba(0,0,0,0.7); z-index:999; justify-content: center; align-items: center;">
-    <div style="background: white; color: black; max-width: 600px; width: 90%; padding: 30px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); position: relative; font-family: 'Cairo', sans-serif;">
-      <h2 style="margin-top: 0; font-size: 1.6rem; color: #5a2a83;">قصة الموقع</h2>
-      <p style="line-height: 1.8;">
-        هذا النظام هو نتيجة عمل فردي وشغف شخصي بالتقنية والتعليم. بدأ كفكرة بسيطة لتسهيل إدارة المدارس بطريقة مرنة وسهلة، وتطور تدريجياً ليصبح أداة قوية تلبي احتياجات الإدارات المدرسية. تم تصميمه وبرمجته بالكامل من قبل إلياس عكام، بدعم من ملاحظات المدارس واستخدام تقنيات حديثة، ليكون نظامًا شاملاً وبسيطًا في نفس الوقت.
-      </p>
-      <p style="line-height: 1.8;">ملاحظة: هذا الموقع عمل فردي، لذلك يرجى تفهم أي تأخير في الدعم أو التحديثات.</p>
-      <button onclick="hideStory()" style="margin-top: 20px; padding: 8px 18px; background-color: #5a2a83; color: white; border: none; border-radius: 8px; cursor: pointer;">إغلاق</button>
-    </div>
+  <!-- صندوق البيانات -->
+  <div id="dataBox">
+    <div id="dataContent"></div>
+    <button onclick="copyData()">📋 نسخ</button>
+    <button onclick="downloadData()">📁 تحميل</button>
+    <button onclick="hideData()">❌ إخفاء</button>
+  </div>
+
+  <!-- تسجيل الدخول -->
+  <div class="container" id="loginBox">
+    <h2>MyEduManage</h2>
+    <h2>تسجيل الدخول</h2>
+    <input type="text" id="loginUsername" placeholder="اسم المستخدم" />
+    <input type="password" id="loginPassword" placeholder="كلمة المرور" />
+    <button onclick="login()">دخول</button>
+    <div id="loginError" class="error"></div>
+    <span class="toggle-link" onclick="toggleForms()">ما عندك حساب؟ سجل الآن</span>
+    <br />
+    <span class="extra-link" style="cursor:pointer;" onclick="window.location.href='subscriptions.html'">ليس لديك اشتراك؟</span>
+  </div>
+
+  <!-- تسجيل حساب جديد -->
+  <div class="container hidden" id="registerBox">
+    <h2>تسجيل حساب جديد</h2>
+    <input type="text" id="regUsername" placeholder="اسم المستخدم" />
+    <input type="password" id="regPassword" placeholder="كلمة المرور" />
+    <input type="password" id="regConfirm" placeholder="تأكيد كلمة المرور" />
+    <button onclick="register()">تسجيل</button>
+    <div id="registerError" class="error"></div>
+    <div id="registerSuccess" class="success"></div>
+    <span class="toggle-link" onclick="toggleForms()">عندك حساب؟ سجل دخول</span>
   </div>
 
   <script>
-    const DEV_CODE_UNLOCK = "elias207"; // رمز التفعيل الصحيح
-    const DEV_CODE_LOCK = "elias270";   // رمز الرجوع للوضع المقيد
-
-    function logout() {
-      localStorage.removeItem("devUnlocked");
-      location.href = "login.html";
+    function toggleForms() {
+      document.getElementById("loginBox").classList.toggle("hidden");
+      document.getElementById("registerBox").classList.toggle("hidden");
+      clearMessages();
     }
 
-    function devLogin() {
-      const code = prompt("أدخل رمز المطور:");
-      if (code === DEV_CODE_UNLOCK) {
-        showLockAnimation("unlock", () => {
-          localStorage.setItem("devUnlocked", "true");
-          activateFullVersion();
-          location.reload();
-        });
-      } else if (code === DEV_CODE_LOCK) {
-        showLockAnimation("lock", () => {
-          localStorage.removeItem("devUnlocked");
-          deactivateFullVersion();
-          location.reload();
-        });
+    function clearMessages() {
+      document.getElementById("loginError").textContent = "";
+      document.getElementById("registerError").textContent = "";
+      document.getElementById("registerSuccess").textContent = "";
+    }
+
+    function register() {
+      const username = document.getElementById("regUsername").value.trim();
+      const password = document.getElementById("regPassword").value.trim();
+      const confirm = document.getElementById("regConfirm").value.trim();
+      const error = document.getElementById("registerError");
+      const success = document.getElementById("registerSuccess");
+      error.textContent = "";
+      success.textContent = "";
+
+      if (!username || !password || !confirm) {
+        error.textContent = "كل الحقول مطلوبة.";
+        return;
+      }
+
+      if (password.length < 4) {
+        error.textContent = "كلمة المرور ضعيفة، استخدم 4 أحرف أو أكثر.";
+        return;
+      }
+
+      if (password !== confirm) {
+        error.textContent = "كلمتا المرور غير متطابقتين.";
+        return;
+      }
+
+      const users = JSON.parse(localStorage.getItem("users") || "[]");
+
+      if (users.find(user => user.username === username)) {
+        error.textContent = "اسم المستخدم مستخدم مسبقًا.";
+        return;
+      }
+
+      users.push({ username, password });
+      localStorage.setItem("users", JSON.stringify(users));
+      success.textContent = "تم إنشاء الحساب بنجاح! سجل الدخول الآن.";
+    }
+
+    function login() {
+      const username = document.getElementById("loginUsername").value.trim();
+      const password = document.getElementById("loginPassword").value.trim();
+      const error = document.getElementById("loginError");
+      error.textContent = "";
+
+      const users = JSON.parse(localStorage.getItem("users") || "[]");
+
+      const found = users.find(user => user.username === username && user.password === password);
+
+      if (found || (username === "admin" && password === "1234")) {
+        localStorage.setItem("isUnlocked", "true");
+        localStorage.setItem("loggedUser", username);
+        window.location.href = "index.html";
       } else {
-        alert("رمز غير صحيح.");
+        error.textContent = "بيانات غير صحيحة، حاول مرة أخرى.";
       }
     }
 
-    function showLockAnimation(type, callback) {
-      const lockOverlay = document.getElementById("lockAnimation");
-      const lockIcon = document.getElementById("lockIcon");
+    // وظائف البيانات المحفوظة:
+    function checkAndShowData() {
+      const password = prompt("ادخل كلمة المرور لعرض البيانات:");
+      const accessKey = "elias221"; // ← غيرها حسب رغبتك
 
-      lockIcon.innerText = type === "unlock" ? "🔓" : "🔒";
-      lockIcon.style.animation = type === "unlock" ? "unlock 1s ease-out forwards" : "lock 1s ease-in forwards";
+      if (password === accessKey) {
+        const users = JSON.parse(localStorage.getItem("users") || "[]");
+        const currentUser = localStorage.getItem("loggedUser") || "";
+        const user = users.find(u => u.username === currentUser);
 
-      lockOverlay.style.display = "flex";
-
-      lockIcon.addEventListener("animationend", function handler() {
-        lockOverlay.style.display = "none";
-        lockIcon.style.animation = "none";
-        lockIcon.removeEventListener("animationend", handler);
-        if (callback) callback();
-      });
-    }
-
-    function activateFullVersion() {
-      const items = document.querySelectorAll("#nav-list .locked");
-      const links = [
-        "pages/students.html",
-        "pages/attendance.html",
-        "pages/behavior.html",
-        "pages/performance.html",
-        "pages/parents.html",
-        "pages/Teacher_sroom.html",
-        "pages/student_attendance.html",
-        "pages/student_absence.html"
-      ];
-      items.forEach((item, index) => {
-        const a = item.querySelector("a");
-        a.href = links[index];
-        item.classList.remove("locked");
-        const badge = a.querySelector("small");
-        if (badge) badge.remove();
-        item.style.opacity = "1";
-        item.style.pointerEvents = "auto";
-      });
-    }
-
-    function deactivateFullVersion() {
-      const items = document.querySelectorAll("#nav-list li");
-      const lockedIndices = [0,1,2,3,4,5,6,7];
-      lockedIndices.forEach(i => {
-        const item = items[i];
-        if (!item.classList.contains("locked")) {
-          item.classList.add("locked");
-          item.style.opacity = "0.6";
-          item.style.pointerEvents = "none";
-          const a = item.querySelector("a");
-          a.href = "#";
-          if (!a.querySelector("small")) {
-            const smallBadge = document.createElement("small");
-            smallBadge.textContent = "للنسخة المدفوعة";
-            a.appendChild(smallBadge);
-          }
+        if (user) {
+          const content = `
+            👤 <strong>الاسم:</strong> ${user.username}<br>
+            🔐 <strong>كلمة المرور:</strong> ${user.password}
+          `;
+          document.getElementById("dataContent").innerHTML = content;
+          document.getElementById("dataBox").style.display = "block";
+        } else {
+          alert("ما فيه مستخدم مسجل حاليًا.");
         }
-      });
-    }
-
-    window.onload = () => {
-      if (localStorage.getItem("devUnlocked") === "true") {
-        activateFullVersion();
       } else {
-        deactivateFullVersion();
+        alert("كلمة المرور غير صحيحة.");
       }
-    };
-
-    function openWhatsApp() {
-      const phoneNumber = '966502701039';
-      const message = encodeURIComponent(
-        'مرحبًا،\n' +
-        'شكرًا لاستخدامك نظام إدارة المدارس المطور بواسطة إلياس عكام.\n\n' +
-        'نحن هنا لمساعدتك في أي استفسار أو مشكلة تتعلق باستخدام النظام أو الاشتراك.\n\n' +
-        'يرجى تزويدنا بالمعلومات التالية:\n' +
-        '- اسم المدرسة\n' +
-        '- نوع المشكلة أو الاستفسار بالتفصيل\n\n' +
-        'فريق الدعم متواجد من الساعة 10 صباحًا حتى 10 مساءً.\n' +
-        'نحن ملتزمون بتقديم أفضل خدمة ممكنة لك.'
-      );
-      const url = `https://wa.me/${phoneNumber}?text=${message}`;
-      window.open(url, '_blank');
     }
 
-    function showStory() {
-      document.getElementById('storyModal').style.display = 'flex';
+    function copyData() {
+      const text = document.getElementById("dataContent").innerText;
+      navigator.clipboard.writeText(text).then(() => alert("✅ تم نسخ البيانات!"));
     }
 
-    function hideStory() {
-      document.getElementById('storyModal').style.display = 'none';
+    function downloadData() {
+      const text = document.getElementById("dataContent").innerText;
+      const blob = new Blob([text], { type: "text/plain" });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "بيانات_الحساب.txt";
+      link.click();
+    }
+
+    function hideData() {
+      document.getElementById("dataBox").style.display = "none";
     }
   </script>
+
 </body>
 </html>
