--- a/subscriptions.html
+++ b/subscriptions.html
@@ -228,6 +228,6 @@
     </div>
   </div>
 
-  <a href="../index.html" class="back-link" onclick="localStorage.removeItem('isUnlocked');">⬅️ الرجوع إلى الصفحة الرئيسية</a>
+  <a href="../index.html" class="back-link">⬅️ الرجوع إلى الصفحة الرئيسية</a>
 </body>
 </html>
