--- a/subscriptions.html
+++ b/subscriptions.html
@@ -245,7 +245,7 @@
       } else {
         // زر العودة للصفحة الرئيسية
         const btn = document.createElement("a");
-        btn.href = "../index.html";
+        btn.href = "index.html";
         btn.className = "back-link";
         btn.textContent = "⬅️ الرجوع إلى الصفحة الرئيسية";
         container.appendChild(btn);
