--- a/index.html
+++ b/index.html
@@ -193,35 +193,17 @@
   </div>
 
   <!-- قصة -->
-  <div id="storyModal" style="display:none; position:fixed; top:0; right:0; bottom:0; left:0; background: rgba(0,0,0,0.7); z-index:999; display: flex; justify-content: center; align-items: center;">
-  <div style="background: white; color: black; max-width: 600px; width: 90%; padding: 30px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); position: relative; font-family: 'Cairo', sans-serif;">
-    <h2 style="margin-top: 0; font-size: 1.6rem; color: #5a2a83;">قصة الموقع</h2>
-    <p style="line-height: 1.8;">
-      هذا النظام هو ثمرة أفكار مبتكرة ومواهب تقنية أؤمن بها وأعمل على تطويرها باستمرار. لدي شغف كبير بابتكار حلول جديدة تسهّل حياة الآخرين، وأطمح دائمًا لتقديم شيء مختلف ومميز في عالم التقنية والتعليم. رغم الإمكانيات المحدودة، إلا أن الطموح والرغبة في التطوير لا حدود لهما، وكل ما أحتاجه هو بعض الدعم والتشجيع لأتمكن من تحويل المزيد من الأفكار الرائعة إلى واقع يخدم الجميع.
-    </p>
-    <p style="line-height: 1.8;">ملاحظة: هذا الموقع عمل فردي، لذلك يرجى تفهم أي تأخير في الدعم أو التحديثات.</p>
-
-    <!-- أزرار التواصل -->
-    <div style="margin-top: 20px; display: flex; gap: 10px; justify-content: flex-start;">
-      <a href="https://wa.me/966502701039" target="_blank" 
-         style="padding: 10px 20px; border-radius: 10px; background-color: #25D366; color: white; font-weight: bold; text-decoration: none; cursor: pointer;">
-        تواصل عبر واتساب
-      </a>
-      <a href="mailto:akkam.elyass@gmail.com?subject=استفسار" target="_blank" 
-         style="padding: 10px 20px; border-radius: 10px; background-color: #0072C6; color: white; font-weight: bold; text-decoration: none; cursor: pointer;">
-        إرسال بريد إلكتروني
-      </a>
-    </div>
-
-    <!-- زر إغلاق -->
-    <div style="margin-top: 25px; text-align: left;">
-      <button onclick="hideStory()" style="padding: 10px 20px; border-radius: 10px; border: none; background-color: #5a2a83; color: white; font-weight: bold; cursor: pointer;">
-        إغلاق
-      </button>
+  <div id="storyModal" style="display:none; position:fixed; top:0; right:0; bottom:0; left:0; background: rgba(0,0,0,0.7); z-index:999; justify-content: center; align-items: center;">
+    <div style="background: white; color: black; max-width: 600px; width: 90%; padding: 30px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); position: relative; font-family: 'Cairo', sans-serif;">
+      <h2 style="margin-top: 0; font-size: 1.6rem; color: #5a2a83;">قصة الموقع</h2>
+      <p style="line-height: 1.8;">
+        هذا النظام هو ثمرة أفكار مبتكرة ومواهب تقنية أؤمن بها وأعمل على تطويرها باستمرار. لدي شغف كبير بابتكار حلول جديدة تسهّل حياة الآخرين، وأطمح دائمًا لتقديم شيء مختلف ومميز في عالم التقنية والتعليم. رغم الإمكانيات المحدودة، إلا أن الطموح والرغبة في التطوير لا حدود لهما، وكل ما أحتاجه هو بعض الدعم والتشجيع لأتمكن من تحويل المزيد من الأفكار الرائعة إلى واقع يخدم الجميع.
+      </p>
+      <p style="line-height: 1.8;">ملاحظة: هذا الموقع عمل فردي، لذلك يرجى تفهم أي تأخير في الدعم أو التحديثات.</p>
+      <div style="margin-top: 18px; text-align: left;"></div>
+      <button onclick="hideStory()" style="padding: 10px 20px; border-radius: 10px; border: none; background-color: #5a2a83; color: white; font-weight: bold; cursor: pointer;">إغلاق</button>
     </div>
   </div>
-</div>
-
 
   <script>
     const DEV_CODE_UNLOCK = "elias207"; // رمز التفعيل الصحيح
