--- a/pages/Parents.html
+++ b/pages/Parents.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>إرسال الرسائل لأولياء الأمور</title>
+  <title>إرسال الرسائل لأولياء الأمور ✉️</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
