add SAtach info

--- a/index.html
+++ b/index.html
@@ -199,7 +199,12 @@
       <p style="line-height: 1.8;">
         هذا النظام هو ثمرة أفكار مبتكرة ومواهب تقنية أؤمن بها وأعمل على تطويرها باستمرار. لدي شغف كبير بابتكار حلول جديدة تسهّل حياة الآخرين، وأطمح دائمًا لتقديم شيء مختلف ومميز في عالم التقنية والتعليم. رغم الإمكانيات المحدودة، إلا أن الطموح والرغبة في التطوير لا حدود لهما، وكل ما أحتاجه هو بعض الدعم والتشجيع لأتمكن من تحويل المزيد من الأفكار الرائعة إلى واقع يخدم الجميع.
       </p>
-      <p style="line-height: 1.8;">ملاحظة: هذا الموقع عمل فردي، لذلك يرجى تفهم أي تأخير في الدعم أو التحديثات.</p>
+      <p style="line-height: 1.8; color: #4caf50; font-weight: bold;">هاذا الموقع تحت إشراف وتطوير فريق ساتيك
+         اذا كان لديك أي استفسار أو اقتراح، فلا تتردد في التواصل معنا على التك توك او ارسال رسالة عبر واتساب المساعدة
+      </p>
+      <button onclick="window.open('https://www.tiktok.com/@projectsatech?_t=ZS-8yqPSPhrNU0&_r=1', '_blank')" style="margin-top: 10px; padding: 10px 20px; border-radius: 10px; border: none; background-color: #000; color: #fff; font-weight: bold; cursor: pointer; display: flex; align-items: center; gap: 8px;">
+        <span style="font-size: 1.3em;">&#x1F3A4;</span> حساب الفريق على تيك توك
+      </button>
       <div style="margin-top: 18px; text-align: left;"></div>
       <button onclick="hideStory()" style="padding: 10px 20px; border-radius: 10px; border: none; background-color: #5a2a83; color: white; font-weight: bold; cursor: pointer;">إغلاق</button>
     </div>
