--- a/login.html
+++ b/login.html
@@ -88,45 +88,61 @@
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
-    #dataBox {
-      position: absolute;
-      top: 60px;
-      right: 15px;
-      background: #fff;
-      color: #333;
-      padding: 15px;
-      border-radius: 12px;
-      max-width: 320px;
-      font-size: 0.9rem;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.3);
-      display: none;
-    }
-    #dataBox button {
-      margin-top: 10px;
-      background: #5a2a83;
-      color: #fff;
-      font-size: 0.9rem;
-    }
+    /* زر الحساب المؤقت */
     #top-right-button {
       position: absolute;
       top: 10px;
       right: 15px;
     }
+    /* البوب أب */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: #fff;
+      color: #333;
+      padding: 20px;
+      border-radius: 12px;
+      text-align: center;
+      width: 90%;
+      max-width: 350px;
+      animation: fadeIn 0.5s ease;
+    }
+    .modal-content h3 {
+      margin-top: 0;
+      margin-bottom: 15px;
+    }
+    .modal-content button {
+      background: #5a2a83;
+      color: #fff;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
 
-  <!-- زر عرض البيانات -->
+  <!-- زر الحساب المؤقت -->
   <div id="top-right-button">
-    <button onclick="checkAndShowData()">📂 عرض بياناتي</button>
+    <button onclick="generateTempAccount()">⚡ حساب مؤقت</button>
   </div>
 
-  <!-- صندوق البيانات -->
-  <div id="dataBox">
-    <div id="dataContent"></div>
-    <button onclick="copyData()">📋 نسخ</button>
-    <button onclick="downloadData()">📁 تحميل</button>
-    <button onclick="hideData()">❌ إخفاء</button>
+  <!-- البوب أب -->
+  <div id="tempModal" class="modal">
+    <div class="modal-content">
+      <h3>🔑 حساب مؤقت</h3>
+      <div id="tempData"></div>
+      <button onclick="copyTempData()">📋 نسخ</button>
+      <button onclick="closeModal()">❌ إغلاق</button>
+    </div>
   </div>
 
   <!-- تسجيل الدخول -->
@@ -222,47 +238,29 @@
       }
     }
 
-    // وظائف البيانات المحفوظة:
-    function checkAndShowData() {
-      const password = prompt("ادخل كلمة المرور لعرض البيانات:");
-      const accessKey = "elias221"; // ← غيرها حسب رغبتك
+    // توليد حساب مؤقت
+    function generateTempAccount() {
+      const username = "user" + Math.floor(Math.random() * 10000);
+      const password = Math.random().toString(36).slice(-8);
 
-      if (password === accessKey) {
-        const users = JSON.parse(localStorage.getItem("users") || "[]");
-        const currentUser = localStorage.getItem("loggedUser") || "";
-        const user = users.find(u => u.username === currentUser);
+      const users = JSON.parse(localStorage.getItem("users") || "[]");
+      users.push({ username, password });
+      localStorage.setItem("users", JSON.stringify(users));
 
-        if (user) {
-          const content = `
-            👤 <strong>الاسم:</strong> ${user.username}<br>
-            🔐 <strong>كلمة المرور:</strong> ${user.password}
-          `;
-          document.getElementById("dataContent").innerHTML = content;
-          document.getElementById("dataBox").style.display = "block";
-        } else {
-          alert("ما فيه مستخدم مسجل حاليًا.");
-        }
-      } else {
-        alert("كلمة المرور غير صحيحة.");
-      }
+      document.getElementById("tempData").innerHTML = `
+        👤 <strong>اسم المستخدم:</strong> ${username}<br>
+        🔐 <strong>كلمة المرور:</strong> ${password}
+      `;
+      document.getElementById("tempModal").style.display = "flex";
     }
 
-    function copyData() {
-      const text = document.getElementById("dataContent").innerText;
+    function copyTempData() {
+      const text = document.getElementById("tempData").innerText;
       navigator.clipboard.writeText(text).then(() => alert("✅ تم نسخ البيانات!"));
     }
 
-    function downloadData() {
-      const text = document.getElementById("dataContent").innerText;
-      const blob = new Blob([text], { type: "text/plain" });
-      const link = document.createElement("a");
-      link.href = URL.createObjectURL(blob);
-      link.download = "بيانات_الحساب.txt";
-      link.click();
-    }
-
-    function hideData() {
-      document.getElementById("dataBox").style.display = "none";
+    function closeModal() {
+      document.getElementById("tempModal").style.display = "none";
     }
   </script>
 
